--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="styles.css?v=2">
+    <link rel="stylesheet" href="styles.css?v=3">
 </head>
 <body>
     <!-- Cursor Glow Effect -->
@@ -54,9 +54,7 @@
                 <p class="hero-greeting">
                     <span class="wave">👋</span> Hello, I'm
                 </p>
-                <h1 class="hero-name">
-                    <span class="text-gradient">Yash Kalathiya</span>
-                </h1>
+                <h1 class="hero-name">Yash Kalathiya</h1>
                 <div class="hero-titles">
                     <span class="title-wrapper">
                         <span class="title" id="typed-text"></span>
