🔄 Force cache bust with timestamp

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     
-    <link rel="stylesheet" href="styles.css?v=5">
+    <!-- Cache Bust -->
+    <link rel="stylesheet" href="styles.css?v=1733151600">
 </head>
 <body>
     <!-- Noise Overlay -->
@@ -556,6 +557,6 @@
         <span id="toastMessage">Copied to clipboard!</span>
     </div>
 
-    <script src="script.js?v=2"></script>
+    <script src="script.js?v=1733151600"></script>
 </body>
 </html>
